numMipmaps() returns the index of the maximum bitmap instead of the actual number. This means that the RHI code path, which provides the correct number according to the documentation, renders a different result. It is unclear what the output is supposed to look like.
- resulted from
-
QTBUG-83364 Investigate lancelot discrepancies between RHI and direct OpenGL
-
- Closed
-