Clean up the mipmap count vs. max level controversy

Make the texturedata store the mipmap count in an appropriately named
variable so that it is clear what it is.

This changes behavior in one place: with light probes the highest mip
level index is now correct instead of being off by -1.

Fixes: QTBUG-83627
Change-Id: Ib954193c5259ac0cef561de38911c256bc8158f0
Reviewed-by: Andy Nichols <andy.nichols@qt.io>