src/runtimerender/qssgrenderimagetexturedata_p.h
@@ -68,7 +68,7 @@ struct QSSGRenderImageTextureFlags : public QFlags<QSSGImageTextureFlagValue>
 struct QSSGRenderImageTextureData
 {
     QRhiTexture *m_rhiTexture = nullptr; // not owned
-    int m_mipmaps = 0;
+    int m_mipmapCount = 0;
     QSSGRenderImageTextureFlags m_textureFlags;
 
     QSSGRenderImageTextureData();
